--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,29 +1,29 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
-  # 🏗️ Install Dependencies & Build
-  - name: 'node:18'
-    dir: 'frontend'
+  # 🏗️ 1️⃣ Install dependencies
+  - name: 'node:20'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         npm install
+        npm install -g @angular/cli
+
+  # 🏗️ 2️⃣ Build the Angular frontend
+  - name: 'node:20'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
         npm run build -- --configuration=production
 
-  # 🚀 Deploy to Firebase Hosting (Ensure Firebase CLI is Installed in the Same Step)
-  - name: 'node:18'
-    dir: 'frontend'
+  # 🚀 3️⃣ Install Firebase CLI and Deploy to Firebase Hosting
+  - name: 'node:20'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         npm install -g firebase-tools
-        firebase deploy --only hosting --token "$$FIREBASE_TOKEN"
-    secretEnv: ['FIREBASE_TOKEN']
-
-availableSecrets:
-  secretManager:
-    - env: "FIREBASE_TOKEN"
-      versionName: "projects/$PROJECT_ID/secrets/FIREBASE_TOKEN/versions/latest"
-
-options:
-  logging: CLOUD_LOGGING_ONLY
+        firebase deploy --only hosting --project $PROJECT_ID
