--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,16 +2,16 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-  # 🏗️ 1️⃣ Install dependencies
+  # 1️⃣ Install dependencies
   - name: 'node:20'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        npm install
-        npm install -g @angular/cli
+        npm ci  # Faster and safer than `npm install`
+        npm install -g @angular/cli firebase-tools
 
-  # 🏗️ 2️⃣ Build the Angular frontend
+  # 2️⃣ Build Angular app
   - name: 'node:20'
     entrypoint: 'bash'
     args:
@@ -19,11 +19,10 @@ steps:
       - |
         npm run build -- --configuration=production
 
-  # 🚀 3️⃣ Install Firebase CLI and Deploy to Firebase Hosting
-  - name: 'node:20'
+  # 3️⃣ Deploy to Firebase Hosting
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        npm install -g firebase-tools
         firebase deploy --only hosting --project $PROJECT_ID
