--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,8 +8,8 @@ steps:
     args:
       - '-c'
       - |
-        npm ci  # Faster and safer than `npm install`
-        npm install -g @angular/cli firebase-tools
+        npm ci
+        npm install -g @angular/cli
 
   # 2️⃣ Build Angular app
   - name: 'node:20'
@@ -19,10 +19,11 @@ steps:
       - |
         npm run build -- --configuration=production
 
-  # 3️⃣ Deploy to Firebase Hosting
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  # 3️⃣ Deploy to Firebase Hosting (install firebase-tools here)
+  - name: 'node:20'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
+        npm install -g firebase-tools
         firebase deploy --only hosting --project $PROJECT_ID
