--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,6 @@
   "hosting": {
     "public": "dist/test-best-4",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [{ "source": "**", "destination": "browser/index.html" }]
+    "rewrites": [{ "source": "**", "destination": "index.html" }]
   }
 }
